--- a/src/Features/Signin/signin.module.css
+++ b/src/Features/Signin/signin.module.css
@@ -47,3 +47,13 @@
     margin-bottom: 1.7rem;
 
 }
+
+@media (max-width:850px){
+    .section_one_heading{
+        font-size: 3rem;
+    }
+    .section_one{
+        display: flex;
+        align-items: center;
+    }
+}
