--- a/src/Components/DashboardCard/dashboardcard.module.css
+++ b/src/Components/DashboardCard/dashboardcard.module.css
@@ -79,3 +79,60 @@
     flex-direction: column;
     gap: 0.4rem;
 }
+
+@media (max-width:500px){
+    .container{
+        display: flex;
+        margin: 0px;
+        gap: 0.8rem;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    } 
+    .card1 {
+    height: 6rem;
+    width: 10rem;
+    background-color: #DDEFE0;
+    color: black;
+    border-radius: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    }
+    .card2 {
+        height: 6rem;
+        width: 10rem;
+        background-color: #F4ECDD;
+        color: black;
+        border-radius: 1.2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        }
+    .card3 {
+        height: 6rem;
+        width: 10rem;
+        background-color: #EFDADA;
+        color: black;
+        border-radius: 1.2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        }   
+    .card4 {
+        height: 6rem;
+        width: 10rem;
+        background-color: #DEE0EF;
+        color: black;
+        border-radius: 1.2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        }
+    .number{
+        font-size: 1rem;
+    }
+    .logo{
+        margin-left: 7.5rem;
+    }
+  
+}
