--- a/src/Components/TopProducts/topproducts.module.css
+++ b/src/Components/TopProducts/topproducts.module.css
@@ -130,3 +130,23 @@
     font-family: 'Montserrat' , 'san-serif';
     margin-top: 0.8rem;
 }
+
+@media (max-width:500px){
+    .container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin: 0px;
+        margin: 0.8rem;
+    }
+    .pie_chart{
+        height: 7rem;
+        width: 7rem;
+    }
+    .card_one{
+        width: 20rem;
+    }
+    .card_two{
+        width: 21rem;
+    }
+}
