--- a/src/Components/DashboardCard/dashboardcard.module.css
+++ b/src/Components/DashboardCard/dashboardcard.module.css
@@ -1,5 +1,7 @@
 .container {
     display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
     align-items: center;
     justify-content: space-between;
     margin-left: 1rem;
