--- a/src/Components/Dashboardheader/dashboardheader.module.css
+++ b/src/Components/Dashboardheader/dashboardheader.module.css
@@ -62,6 +62,7 @@ input::placeholder {
     display: flex;
     align-items: center;
     justify-content: stretch;
+    flex-direction: row !important;
     gap: 1rem;
   }
 
