--- a/src/Components/DashboardCard/dashboardcard.module.css
+++ b/src/Components/DashboardCard/dashboardcard.module.css
@@ -1,140 +1,137 @@
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 1rem;
-    margin-right: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 1rem;
+  margin-right: 3rem;
 }
 
 .card1 {
-    height: 7rem;
-    width: 12rem;
-    background-color: #DDEFE0;
-    color: black;
-    border-radius: 1.2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  height: 7rem;
+  width: 12rem;
+  background-color: #ddefe0;
+  color: black;
+  border-radius: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .card2 {
-    height: 7rem;
-    width: 12rem;
-    background-color: #F4ECDD;
-    color: black;
-    border-radius: 1.2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  height: 7rem;
+  width: 12rem;
+  background-color: #f4ecdd;
+  color: black;
+  border-radius: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .card3 {
-    height: 7rem;
-    width: 12rem;
-    background-color: #EFDADA;
-    color: black;
-    border-radius: 1.2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-
+  height: 7rem;
+  width: 12rem;
+  background-color: #efdada;
+  color: black;
+  border-radius: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .card4 {
-    height: 7rem;
-    width: 12rem;
-    background-color: #DEE0EF;
-    color: black;
-    border-radius: 1.2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-
+  height: 7rem;
+  width: 12rem;
+  background-color: #dee0ef;
+  color: black;
+  border-radius: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .content {
-    font-size: 0.8rem;
-    font-family: 'Lato', sans-serif;
-    padding: 0px;
-    margin: 0px;
+  font-size: 0.8rem;
+  font-family: "Lato", sans-serif;
+  padding: 0px;
+  margin: 0px;
 }
 
 .number {
-    font-size: 1.4rem;
-    font-weight: 700;
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Open Sans', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin: 0px;
+  padding: 0px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .logo {
-    font-size: 1.6rem;
-    display: flex;
-    margin-left: 9rem;
+  font-size: 1.6rem;
+  display: flex;
+  margin-left: 9rem;
 }
 
 .content_wrapper {
-    margin-left: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
+  margin-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
 }
 
-@media (max-width:500px){
-    .container{
-        display: flex;
-        margin: 0px;
-        gap: 0.8rem;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-    } 
-    .card1 {
+@media (max-width: 500px) {
+  .container {
+    display: flex;
+    margin: 0px;
+    gap: 0.8rem;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .card1 {
     height: 6rem;
     width: 10rem;
-    background-color: #DDEFE0;
+    background-color: #ddefe0;
     color: black;
     border-radius: 1.2rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    }
-    .card2 {
-        height: 6rem;
-        width: 10rem;
-        background-color: #F4ECDD;
-        color: black;
-        border-radius: 1.2rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        }
-    .card3 {
-        height: 6rem;
-        width: 10rem;
-        background-color: #EFDADA;
-        color: black;
-        border-radius: 1.2rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        }   
-    .card4 {
-        height: 6rem;
-        width: 10rem;
-        background-color: #DEE0EF;
-        color: black;
-        border-radius: 1.2rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        }
-    .number{
-        font-size: 1rem;
-    }
-    .logo{
-        margin-left: 7.5rem;
-    }
-  
+  }
+  .card2 {
+    height: 6rem;
+    width: 10rem;
+    background-color: #f4ecdd;
+    color: black;
+    border-radius: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .card3 {
+    height: 6rem;
+    width: 10rem;
+    background-color: #efdada;
+    color: black;
+    border-radius: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .card4 {
+    height: 6rem;
+    width: 10rem;
+    background-color: #dee0ef;
+    color: black;
+    border-radius: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .number {
+    font-size: 1rem;
+  }
+  .logo {
+    margin-left: 7.5rem;
+  }
 }
