--- a/src/Components/Dashboardheader/dashboardheader.module.css
+++ b/src/Components/Dashboardheader/dashboardheader.module.css
@@ -9,7 +9,7 @@
 .heading {
   padding: 0px;
   margin: 0px;
-  font-family: 'Montserrat', 'san-serif';
+  font-family: "Montserrat", "san-serif";
 }
 
 .image {
@@ -24,7 +24,7 @@
 }
 
 input::placeholder {
-  color: #B0B0B0;
+  color: #b0b0b0;
 }
 
 .input_box_wrapper {
@@ -35,7 +35,7 @@ input::placeholder {
   background-color: white;
   display: flex;
   align-items: center;
-  font-family: 'Montserrat', 'san-serif';
+  font-family: "Montserrat", "san-serif";
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
@@ -55,7 +55,7 @@ input::placeholder {
   display: none;
 }
 
-@media (max-width:500px) {
+@media (max-width: 500px) {
   .container {
     padding: 0px;
     margin: 0.8rem 0.5rem 1rem 0.7rem;
@@ -84,7 +84,6 @@ input::placeholder {
     display: flex;
     justify-content: stretch;
     gap: 0.6rem;
-
   }
 
   .heading {
