--- a/src/Components/Dialog/dialog.module.css
+++ b/src/Components/Dialog/dialog.module.css
@@ -1,179 +1,175 @@
 .signin_options_wrapper {
-    display: flex;
-    gap: 1.5rem;
-    margin-bottom: 1.6rem;
+  display: flex;
+  gap: 1.5rem;
+  margin-bottom: 1.6rem;
 }
 
 .signin_google {
-    height: 1.8rem;
-    width: 11rem;
-    color: #858585;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0.6rem;
-    gap: 0.5rem;
-    font-size: 0.7rem;
-    cursor: pointer;
-    font-family: 'Montserrat', 'san-serif';
+  height: 1.8rem;
+  width: 11rem;
+  color: #858585;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.6rem;
+  gap: 0.5rem;
+  font-size: 0.7rem;
+  cursor: pointer;
+  font-family: "Montserrat", "san-serif";
 }
 
 .signin_google:hover {
-    background-color: rgb(218, 218, 218);
+  background-color: rgb(218, 218, 218);
 }
 
 .signin_google:active {
-    background-color: white;
+  background-color: white;
 }
 
 .signin_apple {
-    height: 1.8rem;
-    width: 11rem;
-    color: #858585;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0.6rem;
-    gap: 0.5rem;
-    font-size: 0.7rem;
-    cursor: pointer;
-    font-family: 'Montserrat', 'san-serif';
+  height: 1.8rem;
+  width: 11rem;
+  color: #858585;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.6rem;
+  gap: 0.5rem;
+  font-size: 0.7rem;
+  cursor: pointer;
+  font-family: "Montserrat", "san-serif";
 }
 
 .signin_apple:hover {
-    background-color: rgb(218, 218, 218);
+  background-color: rgb(218, 218, 218);
 }
 
 .signin_apple:active {
-    background-color: white;
+  background-color: white;
 }
 
 .dialog_box {
-    height: 19rem;
-    width: 24rem;
-    background-color: white;
-    border-radius: 0.6rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  height: 19rem;
+  width: 24rem;
+  background-color: white;
+  border-radius: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 .input_box {
-    height: 2.5rem;
-    width: 20rem;
-    outline: none;
-    background-color: whitesmoke;
-    border: 0rem solid black;
-    border-radius: 0.6rem;
-    margin-bottom: 1.2rem;
-    padding-left: 0.5rem;
-    font-family: 'Montserrat', 'san-serif';
+  height: 2.5rem;
+  width: 20rem;
+  outline: none;
+  background-color: whitesmoke;
+  border: 0rem solid black;
+  border-radius: 0.6rem;
+  margin-bottom: 1.2rem;
+  padding-left: 0.5rem;
+  font-family: "Montserrat", "san-serif";
 }
 
 input::placeholder {
-    font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .button {
-    height: 2.5rem;
-    width: 20rem;
-    outline: none;
-    border: 0rem solid black;
-    border-radius: 0.6rem;
-    font-size: 1rem;
-    font-family: 'Montserrat', 'san-serif';
-    font-weight: 700;
-    background-color: black;
-    color: white;
-    cursor: pointer;
-
+  height: 2.5rem;
+  width: 20rem;
+  outline: none;
+  border: 0rem solid black;
+  border-radius: 0.6rem;
+  font-size: 1rem;
+  font-family: "Montserrat", "san-serif";
+  font-weight: 700;
+  background-color: black;
+  color: white;
+  cursor: pointer;
 }
 
 .button:hover {
-    background-color: rgba(0, 0, 0, 0.817);
+  background-color: rgba(0, 0, 0, 0.817);
 }
 
 .button:active {
-    background-color: black;
+  background-color: black;
 }
 
 .dialog_container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .email_label {
-    margin-top: 1.9rem;
-    margin-bottom: 0.6rem;
-    font-family: 'Lato', sans-serif;
-
+  margin-top: 1.9rem;
+  margin-bottom: 0.6rem;
+  font-family: "Lato", sans-serif;
 }
 
 .password_label {
-    margin-bottom: 0.6rem;
-    font-weight: 400;
-    font-size: 1rem;
-    font-family: 'Lato', sans-serif;
-
-
+  margin-bottom: 0.6rem;
+  font-weight: 400;
+  font-size: 1rem;
+  font-family: "Lato", sans-serif;
 }
 
 .external_Link {
-    color: #346BD4;
-    text-decoration: none;
-    margin-bottom: 1.2rem;
-    font-family: 'Lato', sans-serif;
+  color: #346bd4;
+  text-decoration: none;
+  margin-bottom: 1.2rem;
+  font-family: "Lato", sans-serif;
 }
 
 .footer {
-    color: #858585;
-    margin-top: 1.2rem;
-    font-family: 'Lato', sans-serif;
+  color: #858585;
+  margin-top: 1.2rem;
+  font-family: "Lato", sans-serif;
 }
 
-@media (max-width:500px) {
-    .signin_options_wrapper {
-        display: flex;
-        flex-direction: column;
-    }
+@media (max-width: 500px) {
+  .signin_options_wrapper {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .signin_google {
-        height: 2.5rem;
-        width: 20rem;
-        font-size: 0.9rem;
-        font-weight: 400;
-    }
+  .signin_google {
+    height: 2.5rem;
+    width: 20rem;
+    font-size: 0.9rem;
+    font-weight: 400;
+  }
 
-    .signin_apple {
-        height: 2.5rem;
-        width: 20rem;
-        font-size: 0.9rem;
-        font-weight: 400;
-    }
+  .signin_apple {
+    height: 2.5rem;
+    width: 20rem;
+    font-size: 0.9rem;
+    font-weight: 400;
+  }
 
-    .logo {
-        font-size: 1rem;
-    }
+  .logo {
+    font-size: 1rem;
+  }
 
-    .dialog_box {
-        width: 20rem;
-    }
+  .dialog_box {
+    width: 20rem;
+  }
 
-    .input_box {
-        width: 17rem;
-    }
+  .input_box {
+    width: 17rem;
+  }
 
-    .button {
-        width: 17rem;
-    }
+  .button {
+    width: 17rem;
+  }
 
-    .footer {
-        margin-left: 1.5rem;
-    }
+  .footer {
+    margin-left: 1.5rem;
+  }
 }
