--- a/src/Components/TopProducts/topproducts.module.css
+++ b/src/Components/TopProducts/topproducts.module.css
@@ -1,183 +1,183 @@
 .container {
-    display: flex;
-    margin-left: 1rem;
-    margin-right: 3rem;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 1.5rem;
+  display: flex;
+  margin-left: 1rem;
+  margin-right: 3rem;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
 .card_one {
-    height: 14rem;
-    width: 25rem;
-    border-radius: 1.2rem;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around; 
-    padding-left: 1rem;
+  height: 14rem;
+  width: 25rem;
+  border-radius: 1.2rem;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 1rem;
 }
-.main{
-    display: flex;
-    justify-content: space-around;
+.main {
+  display: flex;
+  justify-content: space-around;
 }
 
 .card_two {
-    height: 14rem;
-    width: 25rem;
-    border-radius: 1.2rem;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 1rem;
+  height: 14rem;
+  width: 25rem;
+  border-radius: 1.2rem;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .pie_chart {
-    width: 9rem;
-    height: 9rem;
-    background: conic-gradient(rgba(238, 132, 132, 1) 0 14%,
-            rgba(246, 220, 125, 1) 14% 45%,
-            rgba(152, 216, 158, 1) 45% 100%);
-    border-radius: 50%;
+  width: 9rem;
+  height: 9rem;
+  background: conic-gradient(
+    rgba(238, 132, 132, 1) 0 14%,
+    rgba(246, 220, 125, 1) 14% 45%,
+    rgba(152, 216, 158, 1) 45% 100%
+  );
+  border-radius: 50%;
 }
 
 .wrapper {
-    margin-left: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: .7rem;
+  margin-left: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
 }
 
 .tag_one {
-    color: #98D89E;
-    padding: 0px;
-    margin: 0px;
-
+  color: #98d89e;
+  padding: 0px;
+  margin: 0px;
 }
 
 .tag_two {
-    color: #F6DC7D;
-    padding: 0px;
-    margin: 0px;
+  color: #f6dc7d;
+  padding: 0px;
+  margin: 0px;
 }
 
 .tag_three {
-    color: #EE8484;
-    padding: 0px;
-    margin: 0px;
+  color: #ee8484;
+  padding: 0px;
+  margin: 0px;
 }
 
-.sub_heading { 
-    color: black;
-    font-family: 'Montserrat', 'san-serif';
-    font-weight: 700;
-    font-size: 0.8rem;
+.sub_heading {
+  color: black;
+  font-family: "Montserrat", "san-serif";
+  font-weight: 700;
+  font-size: 0.8rem;
 }
 
 .sale_percantage {
-    font-size: 0.7rem;
-    font-family: 'Lato', 'san-serif';
-    color: #858585;
+  font-size: 0.7rem;
+  font-family: "Lato", "san-serif";
+  color: #858585;
 }
 
 .card_two_heading {
-    padding: 0px;
-    margin: 0px;
-    font-family: 'Montserrat', 'san-serif';
-    margin-left: 1rem;
+  padding: 0px;
+  margin: 0px;
+  font-family: "Montserrat", "san-serif";
+  margin-left: 1rem;
 }
 
-.card_two_sub_heading{
-    font-family: 'Montserrat', 'san-serif';
-    font-weight: 400;
-    font-size: 0.6rem;
-    color: #858585;
-    line-height: 23px;
+.card_two_sub_heading {
+  font-family: "Montserrat", "san-serif";
+  font-weight: 400;
+  font-size: 0.6rem;
+  color: #858585;
+  line-height: 23px;
 }
 
-.card_two_header{
-    display: flex;
-    align-items: center;
-    gap: 10rem;
+.card_two_header {
+  display: flex;
+  align-items: center;
+  gap: 10rem;
 }
 
 .content_heading {
-    margin-left: 1rem;
-    width: 15rem;
-    flex-wrap: wrap;
-    font-weight: 700;
-    font-family: 'Lato', 'san-serif';
-    margin-top: 1rem;
-    color: #666666;
+  margin-left: 1rem;
+  width: 15rem;
+  flex-wrap: wrap;
+  font-weight: 700;
+  font-family: "Lato", "san-serif";
+  margin-top: 1rem;
+  color: #666666;
 }
 
 .time {
-    font-family: 'Lato', 'san-serif';
-    font-size: 0.7rem;
-    font-weight: 400;
-    margin-left: 1rem;
-    color: #999999;
+  font-family: "Lato", "san-serif";
+  font-size: 0.7rem;
+  font-weight: 400;
+  margin-left: 1rem;
+  color: #999999;
 }
-.location{
-    display: block;
-    font-family: 'Lato', 'san-serif';
-    font-size: 0.7rem;
-    font-weight: 400;
-    margin-left: 1rem;
-    color: #999999;
-
+.location {
+  display: block;
+  font-family: "Lato", "san-serif";
+  font-size: 0.7rem;
+  font-weight: 400;
+  margin-left: 1rem;
+  color: #999999;
 }
 
 .content_wrapper_one {
-    border-left: 0.25rem solid #9BDD7C;
+  border-left: 0.25rem solid #9bdd7c;
 }
 
 .content_wrapper_two {
-    border-left: 0.25rem solid #6972C3;
+  border-left: 0.25rem solid #6972c3;
 }
 
 .content {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
-.card_one_heading{
-    font-family: 'Montserrat' , 'san-serif';
-    margin-top: 0.8rem;
+.card_one_heading {
+  font-family: "Montserrat", "san-serif";
+  margin-top: 0.8rem;
 }
-.card_one_sub_heading{
-    margin-top: 0.8rem;
-    font-weight: 400;
-    font-size: 0.6rem;
-    font-family: 'Montserrat' , 'san-serif';
-    color: #858585;
-    line-height: 23px;
+.card_one_sub_heading {
+  margin-top: 0.8rem;
+  font-weight: 400;
+  font-size: 0.6rem;
+  font-family: "Montserrat", "san-serif";
+  color: #858585;
+  line-height: 23px;
 }
-.card_one_header{
-    display: flex;
-    gap: 10rem;
+.card_one_header {
+  display: flex;
+  gap: 10rem;
 }
-.icon{
-    padding: 0rem 0rem 0rem 0.3rem;
+.icon {
+  padding: 0rem 0rem 0rem 0.3rem;
 }
 
-@media (max-width:500px){
-    .container{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        margin: 0px;
-        margin: 0.8rem;
-    }
-    .pie_chart{
-        height: 7rem;
-        width: 7rem;
-    }
-    .card_one{
-        width: 20rem;
-    }
-    .card_two{
-        width: 21rem;
-    }
+@media (max-width: 500px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 0px;
+    margin: 0.8rem;
+  }
+  .pie_chart {
+    height: 7rem;
+    width: 7rem;
+  }
+  .card_one {
+    width: 20rem;
+  }
+  .card_two {
+    width: 21rem;
+  }
 }
